# epic-stream-processor

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ServiceHub.py  Utils.py  Watchdog.py  create_pixel_tables.sql  epic_image.proto  epic_image_pb2.py  epic_image_pb2_grpc.py  epic_postprocess_client.py  epic_postprocessor.py  epic_types.py  example.txt  exec_server.bash  mypy.ini  noxfile.py  pyproject.toml  test_esp.py  test_esp_client.py
.github/: pull_request_template.md
.github/workflows/: release.yml  tests.yml
docs/: conf.py  index.md  reference.md  usage.md
profiling/EPICv0.1/: NVIDIA_Nsight_Systems_80ms_90chan.nsys-rep
src/: run.py
src/epic_stream_processor/: __init__.py  __main__.py  epic_types.py  run.py
src/epic_stream_processor/_utils/: Utils.py  __init__.py
src/epic_stream_processor/epic_grpc/: epic_image.proto  epic_image_pb2.py  epic_image_pb2_grpc.py
src/epic_stream_processor/epic_orm/: __init__.py  pg_pixel_storage.py  pg_types.py
src/epic_stream_processor/epic_services/: Client.py  Server.py  ServiceHub.py  Watchdog.py  __init__.py  client.py  server.py  service_hub.py  uds_client.py  uds_server.py  uds_stream.py  watch_dog.py
src/epic_stream_processor/sql_scripts/: create_pixel_tables.sql  functions.sql
src/epic_stream_processor/voevt_templates/: targeted.xml
tests/: __init__.py  conftest.py  test_client.py  test_main.py  test_pg_pixel_storage.py
