[tool.poetry]
name = "epic-stream-processor"
version = "0.0.1"
description = "Epic Stream Processor"
authors = ["Karthik Reddy <karthik.reddy.s@asu.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/infinitron/epic-stream-processor"
repository = "https://github.com/infinitron/epic-stream-processor"
documentation = "https://epic-stream-processor.readthedocs.io"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/infinitron/epic-stream-processor/releases"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
click = ">=8.0.1"
astropy = "^5.1"
pandas = "^1.5.0"
grpcio = "^1.49.0"
APScheduler = "^3.9.1"
streamz = "^0.6.4"
GeoAlchemy2 = "^0.12.5"
psycopg = "^3.1.2"
psycopg2-binary = "^2.9.3"
grpcio-tools = "^1.49.1"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}
grpcio-tools = "^1.49.0"
pytest-grpc = "^0.8.0"
pandas-stubs = "^1.4.4"
pytest-pgsql = "^1.1.2"
sqlalchemy-stubs = "^0.4"
grpc-stubs = "^1.24.11"
mypy-protobuf = "^3.3.0"
typing-extensions = "^4.3.0"

[tool.poetry.scripts]
epic-stream-processor = "epic_stream_processor.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["epic_stream_processor", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
warn_unused_ignores = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
disallow_any_unimported = true



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--grpc-fake-server --pg-extensions=postgis"
